@@ -236,8 +236,9 @@ static SEXP rep2(SEXP s, SEXP ncopy)
     case EXPRSXP:
 	for (i = 0; i < nc; i++) {
 //	    if ((i+1) % ni == 0) R_CheckUserInterrupt();
+	    SEXP elt = duplicate(VECTOR_ELT(s, i));
 	    for (j = 0; j < INTEGER(t)[i]; j++)
-		SET_VECTOR_ELT(a, n++, VECTOR_ELT(s, i));
+		SET_VECTOR_ELT(a, n++, elt);
 	}
 	break;
     case RAWSXP:
